# project-v-core

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: build.yml  doxygen.yml
examples/core_sandbox/: CMakeLists.txt  main.cpp
include/projectV/core/: application.hpp  logger.hpp  mesh.hpp  meshHandle.hpp  meshLoader.hpp  raytracer.hpp  renderView.hpp  renderable.hpp  renderer.hpp  shader.hpp  shaderHandle.hpp  shaderLoader.hpp  texture.hpp  textureLoader.hpp  transform.hpp  window.hpp
include/projectV/core/math/: math.hpp
src/core/: core.cpp  logger.cpp
